2005-08-24  Tom Tromey  <tromey@redhat.com>

	PR classpath/23183:
	* gnu/testlet/java/text/SimpleDateFormat/regress.java (test):
	Added 2 new regression tests.

2005-08-23  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/UIManager/LookAndFeelInfo/constructor.java: new file.
	
2005-08-23  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/UIManager/addAuxiliaryLookAndFeel.java: new file,
	* gnu/testlet/javax/swing/UIManager/addPropertyChangeListener.java: new file,
	* gnu/testlet/javax/swing/UIManager/getAuxiliaryLookAndFeels.java: new file,
	* gnu/testlet/javax/swing/UIManager/getCrossPlatformLookAndFeelClassName.java: new file,
	* gnu/testlet/javax/swing/UIManager/getDefaults.java: new file,
	* gnu/testlet/javax/swing/UIManager/getLookAndFeelDefaults.java: new file,
	* gnu/testlet/javax/swing/UIManager/getPropertyChangeListeners.java: new file,
	* gnu/testlet/javax/swing/UIManager/removeAuxiliaryLookAndFeel.java: new file,
	* gnu/testlet/javax/swing/UIManager/setLookAndFeel.java: new file,
	* gnu/testlet/javax/swing/UIManager/MyLookAndFeel.java: new file.

2005-08-23  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/util/Vector/copyInto.java: new test.
	
2005-08-23  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/event/SwingPropertyChangeSupport/addPropertyChangeListener.java: new test;
	* gnu/testlet/javax/swing/event/SwingPropertyChangeSupport/constructor.java: new test;
	* gnu/testlet/javax/swing/event/SwingPropertyChangeSupport/firePropertyChange.java: new test;
	* gnu/testlet/javax/swing/event/SwingPropertyChangeSupport/getPropertyChangeListeners.java: new test;
	* gnu/testlet/javax/swing/event/SwingPropertyChangeSupport/hasListeners.java: new test;
	* gnu/testlet/javax/swing/event/SwingPropertyChangeSupport/removePropertyChangeListener.java: new test.
	
2005-08-20  Thomas Fitzsimmons  <fitzsim@redhat.com>
